[MODFIN-415] - fix required interface name (#281)
* [MODFIN-415] - fix required interface name

* [MODFIN-415] - fix required interface name